--- a/ProyectoProgra04/ProyectoProgra04/Properties/Resources.resx
+++ b/ProyectoProgra04/ProyectoProgra04/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="quote_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\quote-bg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="chrome_trex_dinosaur" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\chrome-trex-dinosaur.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
